Resolves: tdf#123019 give modal dialog a parent

Change-Id: I669d8cb18ed78fcdb50aa3f452661500d75ad880